implemented player-list component
