# player-statistics-backend/src/main/java/com/spring/api/playerstatistics/controller/StatisticsController.java
@@ -3,14 +3,11 @@ package com.spring.api.playerstatistics.controller;
 import com.spring.api.playerstatistics.model.Player;
 import com.spring.api.playerstatistics.repository.PlayerRepository;
 import lombok.AllArgsConstructor;
-import org.springframework.http.HttpEntity;
 import org.springframework.http.HttpStatus;
 import org.springframework.http.ResponseEntity;
-import org.springframework.web.bind.annotation.GetMapping;
-import org.springframework.web.bind.annotation.PathVariable;
-import org.springframework.web.bind.annotation.RequestMapping;
-import org.springframework.web.bind.annotation.RestController;
+import org.springframework.web.bind.annotation.*;
 
+import java.util.List;
 import java.util.Optional;
 
 @RestController
@@ -20,11 +17,13 @@ public class StatisticsController {
 
     private PlayerRepository playerRepository;
 
+    @CrossOrigin
     @GetMapping(path = "/players")
-    public ResponseEntity<Iterable<Player>> getAllPlayers() {
-        return new ResponseEntity(playerRepository.findAll(), HttpStatus.OK);
+    public ResponseEntity<List<Player>> getAllPlayers() {
+        return new ResponseEntity(playerRepository.findAllByOrderByRanking(), HttpStatus.OK);
     }
 
+    @CrossOrigin
     @GetMapping(path = "/player/{id}")
     public ResponseEntity<Player> getPlayer(@PathVariable("id") long id) {
         final Optional<Player> player = playerRepository.findById(id);
