# player-statistics-backend/src/main/java/com/spring/api/playerstatistics/repository/PlayerRepository.java
@@ -3,5 +3,8 @@ package com.spring.api.playerstatistics.repository;
 import com.spring.api.playerstatistics.model.Player;
 import org.springframework.data.repository.CrudRepository;
 
+import java.util.List;
+
 public interface PlayerRepository extends CrudRepository<Player, Long> {
+    List<Player> findAllByOrderByRanking();
 }
